--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,12 +4,12 @@ workflows:
     max_build_duration: 60
     environment:
       vars:
-        # اترك السطر هذا لتعريف JAVA_HOME الافتراضي الخاص بـ Codemagic
-        # Codemagic ستختار النسخة المناسبة تلقائياً
+        # Codemagic سيختار JAVA_HOME تلقائيًا
     scripts:
       - name: Build release AAB
         script: |
           ./gradlew clean :app:bundleRelease
     artifacts:
       - app/build/outputs/bundle/release/*.aab
+
 
